Marked mapped confederacy cities / fixed name mistakes

--- a/localisation/replace/state_names_overrides_l_english.yml
+++ b/localisation/replace/state_names_overrides_l_english.yml
@@ -362,9 +362,9 @@
  STATE_361:0 "STATE_361"
  STATE_362:0 "STATE_362"
  STATE_363:0 "STATE_363"
- STATE_364:0 "STATE_364"
+ STATE_364:0 "Fleatsam"
  STATE_365:0 "STATE_365"
- STATE_366:0 "STATE_366"
+ STATE_366:0 "Aphidburg"
  STATE_367:0 "STATE_367"
  STATE_368:0 "North Ponderosa"
  STATE_369:0 "STATE_369"
@@ -431,7 +431,7 @@
  STATE_430:0 "STATE_430"
  STATE_431:0 "STATE_431"
  STATE_432:0 "STATE_432"
- STATE_433:0 "STATE_433"
+ STATE_433:0 "Ridensford"
  STATE_434:0 "STATE_434"
  STATE_435:0 "STATE_435"
  STATE_436:0 "STATE_436"
@@ -541,11 +541,11 @@
  STATE_540:0 "STATE_540"
  STATE_541:0 "STATE_541"
  STATE_542:0 "STATE_542"
- STATE_543:0 "STATE_543"
- STATE_544:0 "STATE_544"
- STATE_545:0 "STATE_545"
- STATE_546:0 "STATE_546"
- STATE_547:0 "STATE_547"
+ STATE_543:0 "Lonesand"
+ STATE_544:0 "Sundown"
+ STATE_545:0 "Eaglegan"
+ STATE_546:0 "Flom"
+ STATE_547:0 "Pontoria"
  STATE_548:0 "STATE_548"
  STATE_549:0 "STATE_549"
  STATE_550:0 "Luna Nova"
@@ -562,12 +562,12 @@
  STATE_561:0 "STATE_561"
  STATE_562:0 "STATE_562"
  STATE_563:0 "STATE_563"
- STATE_564:0 "Whinnyapolis"
- STATE_565:0 "STATE_565"
- STATE_566:0 "STATE_566"
- STATE_567:0 "STATE_567"
+ STATE_564:0 "Whinnysota"
+ STATE_565:0 "Hippogriffe-Falls"
+ STATE_566:0 "Dufrost"
+ STATE_567:0 "Barkfield"
  STATE_568:0 "STATE_568"
- STATE_569:0 "STATE_569"
+ STATE_569:0 "Floodville"
  STATE_570:0 "STATE_570"
  STATE_571:0 "STATE_571"
  STATE_572:0 "STATE_572"
@@ -585,57 +585,57 @@
  STATE_584:0 "STATE_584"
  STATE_585:0 "STATE_585"
  STATE_586:0 "STATE_586"
- STATE_587:0 "STATE_587"
+ STATE_587:0 "Woodbury"
  STATE_588:0 "STATE_588"
  STATE_589:0 "STATE_589"
- STATE_590:0 "STATE_590"
+ STATE_590:0 "Roadschester"
  STATE_591:0 "STATE_591"
- STATE_592:0 "STATE_592"
+ STATE_592:0 "Whinnytonka"
  STATE_593:0 "STATE_593"
  STATE_594:0 "STATE_594"
- STATE_595:0 "STATE_595"
+ STATE_595:0 "Marish"
  STATE_596:0 "STATE_596"
  STATE_597:0 "STATE_597"
  STATE_598:0 "STATE_598"
  STATE_599:0 "STATE_599"
  STATE_600:0 "STATE_600"
  STATE_601:0 "STATE_601"
- STATE_602:0 "STATE_602"
- STATE_603:0 "STATE_603"
+ STATE_602:0 "Tuckborough"
+ STATE_603:0 "Longbottom"
  STATE_604:0 "Shire"
  STATE_605:0 "STATE_605"
- STATE_606:0 "STATE_606"
+ STATE_606:0 "Crickhollow"
  STATE_607:0 "Yonderhill"
  STATE_608:0 "STATE_608"
  STATE_609:0 "Mariposa"
  STATE_610:0 "STATE_610"
  STATE_611:0 "STATE_611"
- STATE_612:0 "STATE_612"
- STATE_613:0 "STATE_613"
- STATE_614:0 "STATE_614"
+ STATE_612:0 "Richland"
+ STATE_613:0 "Steedchester"
+ STATE_614:0 "Whitfurrows"
  STATE_615:0 "STATE_615"
  STATE_616:0 "STATE_616"
- STATE_617:0 "STATE_617"
- STATE_618:0 "STATE_618"
+ STATE_617:0 "Bucklebury"
+ STATE_618:0 "Greenwater"
  STATE_619:0 "STATE_619"
  STATE_620:0 "STATE_620"
- STATE_621:0 "STATE_621"
+ STATE_621:0 "Burnsville"
  STATE_622:0 "STATE_622"
- STATE_623:0 "STATE_623"
- STATE_624:0 "STATE_624"
+ STATE_623:0 "Trottort"
+ STATE_624:0 "Cheyneigh"
  STATE_625:0 "STATE_625"
  STATE_626:0 "STATE_626"
  STATE_627:0 "Hedgewards"
- STATE_628:0 "STATE_628"
- STATE_629:0 "STATE_629"
- STATE_630:0 "STATE_630"
+ STATE_628:0 "Moonhead"
+ STATE_629:0 "Dappleluth"
+ STATE_630:0 "Roseville"
  STATE_631:0 "STATE_631"
- STATE_632:0 "STATE_632"
+ STATE_632:0 "Mackinkato"
  STATE_633:0 "STATE_633"
  STATE_634:0 "STATE_634"
  STATE_635:0 "STATE_635"
  STATE_636:0 "STATE_636"
- STATE_637:0 "STATE_637"
+ STATE_637:0 "Richfield"
  STATE_638:0 "STATE_638"
  STATE_639:0 "STATE_639"
  STATE_640:0 "STATE_640"
@@ -706,21 +706,21 @@
  STATE_705:0 "STATE_705"
  STATE_706:0 "STATE_706"
  STATE_707:0 "STATE_707"
- STATE_708:0 "STATE_708"
+ STATE_708:0 "Sundale"
  STATE_709:0 "STATE_709"
- STATE_710:0 "STATE_710"
- STATE_711:0 "STATE_711"
+ STATE_710:0 "Greenhorn"
+ STATE_711:0 "Override"
  STATE_712:0 "STATE_712"
  STATE_713:0 "Whitebell"
  STATE_714:0 "STATE_714"
- STATE_715:0 "STATE_715"
+ STATE_715:0 "Horselena"
  STATE_716:0 "STATE_716"
  STATE_717:0 "STATE_717"
  STATE_718:0 "STATE_718"
  STATE_719:0 "STATE_719"
  STATE_720:0 "STATE_720"
  STATE_721:0 "STATE_721"
- STATE_722:0 "STATE_722"
+ STATE_722:0 "Bridlle"
  STATE_723:0 "STATE_723"
  STATE_724:0 "Albion"
  STATE_725:0 "STATE_725"
@@ -861,13 +861,13 @@
  STATE_860:0 "Canterine"
  STATE_861:0 "STATE_861"
  STATE_862:0 "STATE_862"
- STATE_863:0 "STATE_863"
+ STATE_863:0 "Vanderhoof"
  STATE_864:0 "STATE_864"
  STATE_865:0 "STATE_865"
  STATE_866:0 "STATE_866"
  STATE_867:0 "STATE_867"
  STATE_868:0 "STATE_868"
- STATE_869:0 "STATE_869"
+ STATE_869:0 "Hope"
  STATE_870:0 "STATE_870"
  STATE_871:0 "STATE_871"
  STATE_872:0 "STATE_872"
@@ -878,11 +878,11 @@
  STATE_877:0 "Evergreen"
  STATE_878:0 "STATE_878"
  STATE_879:0 "STATE_879"
- STATE_880:0 "STATE_880"
+ STATE_880:0 "Montecanter"
  STATE_881:0 "STATE_881"
  STATE_882:0 "STATE_882"
- STATE_883:0 "STATE_883"
- STATE_884:0 "STATE_884"
+ STATE_883:0 "Sunnyside"
+ STATE_884:0 "Hoofington"
  STATE_885:0 "STATE_885"
  STATE_886:0 "STATE_886"
  STATE_887:0 "STATE_887"
@@ -892,7 +892,7 @@
  STATE_891:0 "STATE_891"
  STATE_892:0 "STATE_892"
  STATE_893:0 "STATE_893"
- STATE_894:0 "STATE_894"
+ STATE_894:0 "Bridlenna"
  STATE_895:0 "STATE_895"
  STATE_896:0 "STATE_896"
  STATE_897:0 "STATE_897"
@@ -907,7 +907,7 @@
  STATE_906:0 "STATE_906"
  STATE_907:0 "STATE_907"
  STATE_908:0 "STATE_908"
- STATE_909:0 "STATE_909"
+ STATE_909:0 "Marexandria"
  STATE_910:0 "STATE_910"
  STATE_911:0 "STATE_911"
  STATE_912:0 "STATE_912"
@@ -919,7 +919,7 @@
  STATE_918:0 "STATE_918"
  STATE_919:0 "STATE_919"
  STATE_920:0 "STATE_920"
- STATE_921:0 "STATE_921"
+ STATE_921:0 "Horseveport"
  STATE_922:0 "STATE_922"
  STATE_923:0 "STATE_923"
  STATE_924:0 "STATE_924"
