Перевел города и названия, исправил 2 города
Перевод чист

--- a/localisation/countries_l_russian.yml
+++ b/localisation/countries_l_russian.yml
@@ -4,18 +4,18 @@
 #####################
 #EQS in replace/tdr_eaw_countries_overrides_l_russian.yml
 
-WHN_neutrality:0 "Protectorate Whinnyapolis"
-WHN_neutrality_DEF:0 "Protectorate Whinnyapolis"
-WHN_fascism:0 ""
-WHN_fascism_DEF:0 ""
-WHN_communism:0 ""
-WHN_communism_DEF:0 ""
-WHN_democratic:0 ""
-WHN_democratic_DEF:0 ""
-WHN_fascism_ADJ:0 "Equestrian"
-WHN_democratic_ADJ:0 "Equestrian"
-WHN_neutrality_ADJ:0 "Equestrian"
-WHN_communism_ADJ:0 "Equestrian"
+WHN_neutrality:0 "Говернорат Винниаполис"
+WHN_neutrality_DEF:0 "Говернорат Винниаполис"
+WHN_fascism:0 "Говернорат Винниаполис"
+WHN_fascism_DEF:0 "Говернорат Винниаполис"
+WHN_communism:0 "Говернорат Винниаполис"
+WHN_communism_DEF:0 "Говернорат Винниаполис"
+WHN_democratic:0 "Говернорат Винниаполис"
+WHN_democratic_DEF:0 "Говернорат Винниаполис"
+WHN_fascism_ADJ:0 "Говернорат Винниаполис"
+WHN_democratic_ADJ:0 "Говернорат Винниаполис"
+WHN_neutrality_ADJ:0 "Говернорат Винниаполис"
+WHN_communism_ADJ:0 "Говернорат Винниаполис"
 
 WES_neutrality:0 "West Equestrian Shore"
 WES_neutrality_DEF:0 "West Equestrian Shore"
