--- a/localisation/victory_points_l_english.yml
+++ b/localisation/victory_points_l_english.yml
@@ -42,7 +42,8 @@ VICTORY_POINTS_12506:0 "Sundown"
 VICTORY_POINTS_12671:0 "Lonesand"
 VICTORY_POINTS_12317:0 "Barkfield"
 VICTORY_POINTS_3193:0 "Dufrost"
-VICTORY_POINTS_12671:0 "Lonesand"
+VICTORY_POINTS_12094:0 "Hills Grove"
+VICTORY_POINTS_2424:0 "Castle Danger"
 #######################################################################
 # West Equestrian Shore ###############################################
 #######################################################################
