--- a/localisation/victory_points_l_russian.yml
+++ b/localisation/victory_points_l_russian.yml
@@ -1,4 +1,4 @@
-﻿l_russian:
+l_russian:
  VICTORY_POINTS_TOOLTIP:0 "§G$NAME$§! victory points = §Y$POINTS$§!"
  VICTORY_POINTS_179:0 "Кантерлот"
 #######################################################################
@@ -7,7 +7,7 @@
 VICTORY_POINTS_3835:0 "Винниаполис"
 VICTORY_POINTS_4528:0 "Северный Винниаполис"
 VICTORY_POINTS_2797:0 "Восточный Винниаполис"
-VICTORY_POINTS_1740:0 "Риверпул"
+VICTORY_POINTS_1740:0 "Риверпуль"
 VICTORY_POINTS_11815:0 "Доббин Лейк"
 VICTORY_POINTS_3444:0 "Родчестер"
 VICTORY_POINTS_12074:0 "Восточный Родчестер"
