Russian loc for states + loc fixes

--- a/localisation/replace/state_names_overrides_l_english.yml
+++ b/localisation/replace/state_names_overrides_l_english.yml
@@ -919,7 +919,7 @@
  STATE_918:0 "STATE_918"
  STATE_919:0 "STATE_919"
  STATE_920:0 "STATE_920"
- STATE_921:0 "Horseveport"
+ STATE_921:0 "Horseverport"
  STATE_922:0 "STATE_922"
  STATE_923:0 "STATE_923"
  STATE_924:0 "STATE_924"
@@ -1423,7 +1423,7 @@
  STATE_1422:0 "STATE_1422"
  STATE_1423:0 "STATE_1423"
  STATE_1424:0 "STATE_1424"
- STATE_1425:0 "Aglossata"
+ STATE_1425:0 "Anglossata"
  STATE_1426:0 "STATE_1426"
  STATE_1427:0 "STATE_1427"
  STATE_1428:0 "STATE_1428"
