Translated states + loc fixes

--- a/localisation/replace/state_names_overrides_l_russian.yml
+++ b/localisation/replace/state_names_overrides_l_russian.yml
@@ -38,7 +38,7 @@
  STATE_37:0 "STATE_37"
  STATE_38:0 "Остров Юкка"
  STATE_39:0 "STATE_39"
- STATE_40:0 "Portland"
+ STATE_40:0 "Портленд"
  STATE_41:0 "STATE_41"
  STATE_42:0 "STATE_42"
  STATE_43:0 "Мейридиан"
@@ -52,7 +52,7 @@
  STATE_51:0 "Галлопрей"
  STATE_52:0 "STATE_52"
  STATE_53:0 "Аякачтли"
- STATE_54:0 "Saltmane"
+ STATE_54:0 "Солтмейн"
  STATE_55:0 "Теночтитлан"
  STATE_56:0 "STATE_56"
  STATE_57:0 "STATE_57"
@@ -355,7 +355,7 @@
  STATE_354:0 "STATE_354"
  STATE_355:0 "STATE_355"
  STATE_356:0 "STATE_356"
- STATE_357:0 "Подероса"
+ STATE_357:0 "Пондероса"
  STATE_358:0 "STATE_358"
  STATE_359:0 "STATE_359"
  STATE_360:0 "STATE_360"
@@ -366,7 +366,7 @@
  STATE_365:0 "STATE_365"
  STATE_366:0 "Апхидбург"
  STATE_367:0 "STATE_367"
- STATE_368:0 "Северная Подероса"
+ STATE_368:0 "Северная Пондероса"
  STATE_369:0 "STATE_369"
  STATE_370:0 "STATE_370"
  STATE_371:0 "STATE_371"
@@ -533,7 +533,7 @@
  STATE_532:0 "STATE_532"
  STATE_533:0 "STATE_533"
  STATE_534:0 "STATE_534"
- STATE_535:0 "Нейагара Фоллс"
+ STATE_535:0 "Нейагара Фолс"
  STATE_536:0 "STATE_536"
  STATE_537:0 "STATE_537"
  STATE_538:0 "STATE_538"
@@ -974,7 +974,7 @@
  STATE_973:0 "STATE_973"
  STATE_974:0 "STATE_974"
  STATE_975:0 "STATE_975"
- STATE_976:0 "Боерасфьорд"
+ STATE_976:0 "Борейфьорд"
  STATE_977:0 "STATE_977"
  STATE_978:0 "STATE_978"
  STATE_979:0 "STATE_979"
