--- a/localisation/victory_points_l_russian.yml
+++ b/localisation/victory_points_l_russian.yml
@@ -422,8 +422,8 @@ VICTORY_POINTS_7606:0 "Брукхаген" #Bruchhagen
 #ALH - Alexhafen
 VICTORY_POINTS_7371:0 "Алексхафен" #Alexhafen
 #BFJ - Boreasfjord
-VICTORY_POINTS_7873:0 "Боерасфьорд" #Boreasfjord
-VICTORY_POINTS_7882:0 "Боерасфьордский Порт"
+VICTORY_POINTS_7873:0 "Борейфьорд" #Boreasfjord
+VICTORY_POINTS_7882:0 "Борейфьордский Порт"
 #WET - Weter
 VICTORY_POINTS_8484:0 "Вэтэр" #Weter
 VICTORY_POINTS_8527:0 "Западный Вэтэр"
