--- a/localisation/replace/eaw_griffon_continent_countries_overrides_l_english.yml
+++ b/localisation/replace/eaw_griffon_continent_countries_overrides_l_english.yml
@@ -1,5 +1,8 @@
 ﻿l_english:
 
+##################label
+# West Equestria #
+##################
 ANG_neutrality:0 "Swangern"
 ANG_neutrality_DEF:0 "Swangern"
 ANG_fascism:0 "Swangern"
