--- a/localisation/replace/tdr_eaw_countries_overrides_l_english.yml
+++ b/localisation/replace/tdr_eaw_countries_overrides_l_english.yml
@@ -35,8 +35,8 @@ CRY_communism_ADJ:0 "Crystal"
 ##################label
 # East Equestria #
 ##################
-STL_neutrality:0 "Starlight's Town"
-STL_neutrality_DEF:0 "Starlight's Town"
+STL_neutrality:0 "Novokristal'sk"
+STL_neutrality_DEF:0 "Novokristal'sk"
 STL_fascism:0 ""
 STL_fascism_DEF:0 ""
 STL_communism:0 ""
@@ -72,10 +72,10 @@ MAN_communism:0 "Manehattan"
 MAN_communism_DEF:0 "Manehattan"
 MAN_democratic:0 "Manehattan"
 MAN_democratic_DEF:0 "Manehattan"
-MAN_fascism_ADJ:0 "Manehattan"
-MAN_democratic_ADJ:0 "Manehattan"
-MAN_neutrality_ADJ:0 "Manehattan"
-MAN_communism_ADJ:0 "Manehattan"
+MAN_fascism_ADJ:0 "Manehattanian"
+MAN_democratic_ADJ:0 "Manehattanian"
+MAN_neutrality_ADJ:0 "Manehattanian"
+MAN_communism_ADJ:0 "Manehattanian"
 
 CHI_neutrality:0 "Chicoltgo"
 CHI_neutrality_DEF:0 "Chicoltgo"
@@ -85,10 +85,10 @@ CHI_communism:0 "Chicoltgo"
 CHI_communism_DEF:0 "Chicoltgo"
 CHI_democratic:0 "Chicoltgo"
 CHI_democratic_DEF:0 "Chicoltgo"
-CHI_fascism_ADJ:0 "Chicoltgo"
-CHI_democratic_ADJ:0 "Chicoltgo"
-CHI_neutrality_ADJ:0 "Chicoltgo"
-CHI_communism_ADJ:0 "Chicoltgo"
+CHI_fascism_ADJ:0 "Chicoltgonian"
+CHI_democratic_ADJ:0 "Chicoltgonian"
+CHI_neutrality_ADJ:0 "Chicoltgonian"
+CHI_communism_ADJ:0 "Chicoltgonian"
 
 BRI_neutrality:0 "Bridlepolis"
 BRI_neutrality_DEF:0 "Bridlepolis"
@@ -98,10 +98,10 @@ BRI_communism:0 "Bridlepolis"
 BRI_communism_DEF:0 "Bridlepolis"
 BRI_democratic:0 "Bridlepolis"
 BRI_democratic_DEF:0 "Bridlepolis"
-BRI_fascism_ADJ:0 "Bridlepolis"
-BRI_democratic_ADJ:0 "Bridlepolis"
-BRI_neutrality_ADJ:0 "Bridlepolis"
-BRI_communism_ADJ:0 "Bridlepolis"
+BRI_fascism_ADJ:0 "Bridlepolian"
+BRI_democratic_ADJ:0 "Bridlepolian"
+BRI_neutrality_ADJ:0 "Bridlepolian"
+BRI_communism_ADJ:0 "Bridlepolian"
 
 MNT_neutrality:0 "Moontown"
 MNT_neutrality_DEF:0 "Moontown"
@@ -111,10 +111,10 @@ MNT_communism:0 "Moontown"
 MNT_communism_DEF:0 "Moontown"
 MNT_democratic:0 "Moontown"
 MNT_democratic_DEF:0 "Moontown"
-MNT_fascism_ADJ:0 "Moontown"
-MNT_democratic_ADJ:0 "Moontown"
-MNT_neutrality_ADJ:0 "Moontown"
-MNT_communism_ADJ:0 "Moontown"
+MNT_fascism_ADJ:0 "Moontownian"
+MNT_democratic_ADJ:0 "Moontownian"
+MNT_neutrality_ADJ:0 "Moontownian"
+MNT_communism_ADJ:0 "Moontownian"
 
 ##################label
 # West Equestria #
@@ -127,10 +127,10 @@ ANG_communism:0 "Swangern"
 ANG_communism_DEF:0 "Swangern"
 ANG_democratic:0 "Swangern"
 ANG_democratic_DEF:0 "Swangern"
-ANG_fascism_ADJ:0 "Swangern"
-ANG_democratic_ADJ:0 "Swangern"
-ANG_neutrality_ADJ:0 "Swangern"
-ANG_communism_ADJ:0 "Swangern"
+ANG_fascism_ADJ:0 "Swangernian"
+ANG_democratic_ADJ:0 "Swangernian"
+ANG_neutrality_ADJ:0 "Swangernian"
+ANG_communism_ADJ:0 "Swangernian"
 
 ##############label
 # South-East #
@@ -177,18 +177,18 @@ LSP_democratic_ADJ:0 "Las Pegasusian"
 LSP_neutrality_ADJ:0 "Las Pegasusian"
 LSP_communism_ADJ:0 "Las Pegasusian"
 
-CAN_neutrality:0 "Canter's Confederation"
-CAN_neutrality_DEF:0 "Canter's Confederation"
-CAN_fascism:0 "Canter's Confederation"
-CAN_fascism_DEF:0 "Canter's Confederation"
-CAN_communism:0 "Canter's Confederation"
-CAN_communism_DEF:0 "Canter's Confederation"
-CAN_democratic:0 "Canter's Confederation"
-CAN_democratic_DEF:0 "Canter's Confederation"
-CAN_fascism_ADJ:0 "Canter's Confederation"
-CAN_democratic_ADJ:0 "Canter's Confederation"
-CAN_neutrality_ADJ:0 "Canter's Confederation"
-CAN_communism_ADJ:0 "Canter's Confederation"
+CAN_neutrality:0 "Canter Confederation"
+CAN_neutrality_DEF:0 "Canter Confederation"
+CAN_fascism:0 "Canter Confederation"
+CAN_fascism_DEF:0 "Canter Confederation"
+CAN_communism:0 "Canter Confederation"
+CAN_communism_DEF:0 "Canter Confederation"
+CAN_democratic:0 "Canter Confederation"
+CAN_democratic_DEF:0 "Canter Confederation"
+CAN_fascism_ADJ:0 "Canter Confederation's"
+CAN_democratic_ADJ:0 "Canter Confederation's"
+CAN_neutrality_ADJ:0 "Canter Confederation's"
+CAN_communism_ADJ:0 "Canter Confederation's"
 
 ##############label
 # North-West #
@@ -217,10 +217,10 @@ YAK_communism:0 ""
 YAK_communism_DEF:0 ""
 YAK_democratic:0 "Crossmountain Republic"
 YAK_democratic_DEF:0 "The Crossmountain Republic"
-YAK_fascism_ADJ:0 "Yak"
-YAK_democratic_ADJ:0 "Yak"
-YAK_neutrality_ADJ:0 "Yak"
-YAK_communism_ADJ:0 "Yak"
+YAK_fascism_ADJ:0 "Yak's"
+YAK_democratic_ADJ:0 "Yak's"
+YAK_neutrality_ADJ:0 "Yak's"
+YAK_communism_ADJ:0 "Yak's"
 
 PNG_neutrality:0 "Pingland"
 PNG_neutrality_DEF:0 "Kingdom of Pingland"
@@ -230,10 +230,10 @@ PNG_communism:0 "Pingland"
 PNG_communism_DEF:0 ""
 PNG_democratic:0 "Pingland Republic"
 PNG_democratic_DEF:0 "Pingland Republic"
-PNG_fascism_ADJ:0 "Pinglands"
-PNG_democratic_ADJ:0 "Pinglands"
-PNG_neutrality_ADJ:0 "Pinglands"
-PNG_communism_ADJ:0 "Pinglands"
+PNG_fascism_ADJ:0 "Pingland's"
+PNG_democratic_ADJ:0 "Pingland's"
+PNG_neutrality_ADJ:0 "Pingland's"
+PNG_communism_ADJ:0 "Pingland's"
 
 PLB_neutrality:0 "Polar Bear Communities"
 PLB_fascism:0 "Polar Bear Communities"
@@ -243,10 +243,10 @@ PLB_neutrality_DEF:0 "The Polar Bear Communities"
 PLB_fascism_DEF:0 "The Polar Bear Communities"
 PLB_communism_DEF:0 "The Polar Bear Socialist Communities"
 PLB_democratic_DEF:0 "The Polar Bear Communities"
-PLB_fascism_ADJ:0 "Polar Bear"
-PLB_democratic_ADJ:0 "Polar Bear"
-PLB_neutrality_ADJ:0 "Polar Bear"
-PLB_communism_ADJ:0 "Polar Bear"
+PLB_fascism_ADJ:0 "Polar Bear's"
+PLB_democratic_ADJ:0 "Polar Bear's"
+PLB_neutrality_ADJ:0 "Polar Bear's"
+PLB_communism_ADJ:0 "Polar Bear's"
 
 #########################label
 # Former Nova Griffonia #
@@ -285,7 +285,7 @@ MOR_communism:0 "Morien"
 MOR_communism_DEF:0 "Morien"
 MOR_democratic:0 "Morien"
 MOR_democratic_DEF:0 "Morien"
-MOR_fascism_ADJ:0 "Moriens"
-MOR_democratic_ADJ:0 "Moriens"
-MOR_neutrality_ADJ:0 "Moriens"
-MOR_communism_ADJ:0 "Moriens"
+MOR_fascism_ADJ:0 "Morien's"
+MOR_democratic_ADJ:0 "Morien's"
+MOR_neutrality_ADJ:0 "Morien's"
+MOR_communism_ADJ:0 "Morien's"
