--- a/localisation/replace/tdr_eaw_countries_overrides_l_russian.yml
+++ b/localisation/replace/tdr_eaw_countries_overrides_l_russian.yml
@@ -3,197 +3,197 @@
 #####################label
 # Equestrian company #
 #####################
-EQS_neutrality:0 "Equestria"
-EQS_neutrality_DEF:0 "Equestria"
-EQS_fascism:0 "Equestrian State"
-EQS_fascism_DEF:0 "The Equestrian State"
-EQS_communism:0 "Socialist Republic of Equestria"
-EQS_communism_DEF:0 "The Socialist Republic of Equestria"
-EQS_democratic:0 "Equestria"
-EQS_democratic_DEF:0 "Equestria"
-EQS_fascism_ADJ:0 "Equestrian"
-EQS_democratic_ADJ:0 "Equestrian"
-EQS_neutrality_ADJ:0 "Equestrian"
-EQS_communism_ADJ:0 "Equestrian"
+EQS_neutrality:0 "Эквестрия"
+EQS_neutrality_DEF:0 "Эквестрия"
+EQS_fascism:0 "Эквестрийское Государство"
+EQS_fascism_DEF:0 "Эквестрийское Государство"
+EQS_communism:0 "Социалистическая Республика Эквестрия"
+EQS_communism_DEF:0 "Социалистическая Республика Эквестрия"
+EQS_democratic:0 "Эквестрия"
+EQS_democratic_DEF:0 "Эквестрия"
+EQS_fascism_ADJ:0 "Эквестрийск"
+EQS_democratic_ADJ:0 "Эквестрийск"
+EQS_neutrality_ADJ:0 "Эквестрийск"
+EQS_communism_ADJ:0 "Эквестрийск"
 
 #########################label
 # Former Crystal Empire #
 #########################
-CRY_neutrality:0 ""
-CRY_neutrality_DEF:0 ""
-CRY_fascism:0 "Crystal Empire"
-CRY_fascism_DEF:0 "The Crystal Empire"
-CRY_communism:0 ""
-CRY_communism_DEF:0 ""
-CRY_democratic:0 ""
-CRY_democratic_DEF:0 ""
-CRY_fascism_ADJ:0 "Crystal"
-CRY_democratic_ADJ:0 "Crystal"
-CRY_neutrality_ADJ:0 "Crystal"
-CRY_communism_ADJ:0 "Crystal"
+CRY_neutrality:0 "Кристальная Империя"
+CRY_neutrality_DEF:0 "Кристальная Империя"
+CRY_fascism:0 "Кристальная Империя"
+CRY_fascism_DEF:0 "Кристальная Империя"
+CRY_communism:0 "Кристальная Империя"
+CRY_communism_DEF:0 "Кристальная Империя"
+CRY_democratic:0 "Кристальная Империя"
+CRY_democratic_DEF:0 "Кристальная Империя"
+CRY_fascism_ADJ:0 "Кристальн"
+CRY_democratic_ADJ:0 "Кристальн"
+CRY_neutrality_ADJ:0 "Кристальн"
+CRY_communism_ADJ:0 "Кристальн"
 
 ##################label
 # East Equestria #
 ##################
-STL_neutrality:0 "Starlight's Town"
-STL_neutrality_DEF:0 "Starlight's Town"
+STL_neutrality:0 "Новокристальск"
+STL_neutrality_DEF:0 "Новокристальск"
 STL_fascism:0 ""
 STL_fascism_DEF:0 ""
 STL_communism:0 ""
 STL_communism_DEF:0 ""
 STL_democratic:0 ""
 STL_democratic_DEF:0 ""
-STL_fascism_ADJ:0 "Severian"
-STL_democratic_ADJ:0 "Severian"
-STL_neutrality_ADJ:0 "Severian"
-STL_communism_ADJ:0 "Severian"
+STL_fascism_ADJ:0 "Северянск"
+STL_democratic_ADJ:0 "Северянск"
+STL_neutrality_ADJ:0 "Северянск"
+STL_communism_ADJ:0 "Северянск"
 
 ################################label
 # East Equestria # Confederacy #
 ################################
-ALB_neutrality:0 "Albion"
-ALB_neutrality_DEF:0 "Albion"
-ALB_fascism:0 "Albion"
-ALB_fascism_DEF:0 "Albion"
-ALB_communism:0 "Albion"
-ALB_communism_DEF:0 "Albion"
-ALB_democratic:0 "Albion"
-ALB_democratic_DEF:0 "Albion"
-ALB_fascism_ADJ:0 "Albionian"
-ALB_democratic_ADJ:0 "Albionian"
-ALB_neutrality_ADJ:0 "Albionian"
-ALB_communism_ADJ:0 "Albionian"
+ALB_neutrality:0 "Альбион"
+ALB_neutrality_DEF:0 "Альбион"
+ALB_fascism:0 "Альбион"
+ALB_fascism_DEF:0 "Альбион"
+ALB_communism:0 "Альбион"
+ALB_communism_DEF:0 "Альбион"
+ALB_democratic:0 "Альбион"
+ALB_democratic_DEF:0 "Альбион"
+ALB_fascism_ADJ:0 "Альбионск"
+ALB_democratic_ADJ:0 "Альбионск"
+ALB_neutrality_ADJ:0 "Альбионск"
+ALB_communism_ADJ:0 "Альбионск"
 
-MAN_neutrality:0 "Manehattan"
-MAN_neutrality_DEF:0 "Manehattan"
-MAN_fascism:0 "Manehattan"
-MAN_fascism_DEF:0 "Manehattan"
-MAN_communism:0 "Manehattan"
-MAN_communism_DEF:0 "Manehattan"
-MAN_democratic:0 "Manehattan"
-MAN_democratic_DEF:0 "Manehattan"
-MAN_fascism_ADJ:0 "Manehattan"
-MAN_democratic_ADJ:0 "Manehattan"
-MAN_neutrality_ADJ:0 "Manehattan"
-MAN_communism_ADJ:0 "Manehattan"
+MAN_neutrality:0 "Мейнхеттен"
+MAN_neutrality_DEF:0 "Мейнхеттен"
+MAN_fascism:0 "Мейнхеттен"
+MAN_fascism_DEF:0 "Мейнхеттен"
+MAN_communism:0 "Мейнхеттен"
+MAN_communism_DEF:0 "Мейнхеттен"
+MAN_democratic:0 "Мейнхеттен"
+MAN_democratic_DEF:0 "Мейнхеттен"
+MAN_fascism_ADJ:0 "Мейнхеттенск"
+MAN_democratic_ADJ:0 "Мейнхеттенск"
+MAN_neutrality_ADJ:0 "Мейнхеттенск"
+MAN_communism_ADJ:0 "Мейнхеттенск"
 
-CHI_neutrality:0 "Chicoltgo"
-CHI_neutrality_DEF:0 "Chicoltgo"
-CHI_fascism:0 "Chicoltgo"
-CHI_fascism_DEF:0 "Chicoltgo"
-CHI_communism:0 "Chicoltgo"
-CHI_communism_DEF:0 "Chicoltgo"
-CHI_democratic:0 "Chicoltgo"
-CHI_democratic_DEF:0 "Chicoltgo"
-CHI_fascism_ADJ:0 "Chicoltgo"
-CHI_democratic_ADJ:0 "Chicoltgo"
-CHI_neutrality_ADJ:0 "Chicoltgo"
-CHI_communism_ADJ:0 "Chicoltgo"
+CHI_neutrality:0 "Чикольтго"
+CHI_neutrality_DEF:0 "Чикольтго"
+CHI_fascism:0 "Чикольтго"
+CHI_fascism_DEF:0 "Чикольтго"
+CHI_communism:0 "Чикольтго"
+CHI_communism_DEF:0 "Чикольтго"
+CHI_democratic:0 "Чикольтго"
+CHI_democratic_DEF:0 "Чикольтго"
+CHI_fascism_ADJ:0 "Чикольтгоск"
+CHI_democratic_ADJ:0 "Чикольтгоск"
+CHI_neutrality_ADJ:0 "Чикольтгоск"
+CHI_communism_ADJ:0 "Чикольтгоск"
 
-BRI_neutrality:0 "Bridlepolis"
-BRI_neutrality_DEF:0 "Bridlepolis"
-BRI_fascism:0 "Bridlepolis"
-BRI_fascism_DEF:0 "Bridlepolis"
-BRI_communism:0 "Bridlepolis"
-BRI_communism_DEF:0 "Bridlepolis"
-BRI_democratic:0 "Bridlepolis"
-BRI_democratic_DEF:0 "Bridlepolis"
-BRI_fascism_ADJ:0 "Bridlepolis"
-BRI_democratic_ADJ:0 "Bridlepolis"
-BRI_neutrality_ADJ:0 "Bridlepolis"
-BRI_communism_ADJ:0 "Bridlepolis"
+BRI_neutrality:0 "Бридлполис"
+BRI_neutrality_DEF:0 "Бридлполис"
+BRI_fascism:0 "Бридлполис"
+BRI_fascism_DEF:0 "Бридлполис"
+BRI_communism:0 "Бридлполис"
+BRI_communism_DEF:0 "Бридлполис"
+BRI_democratic:0 "Бридлполис"
+BRI_democratic_DEF:0 "Бридлполис"
+BRI_fascism_ADJ:0 "Бридлполиск"
+BRI_democratic_ADJ:0 "Бридлполиск"
+BRI_neutrality_ADJ:0 "Бридлполиск"
+BRI_communism_ADJ:0 "Бридлполиск"
 
-MNT_neutrality:0 "Moontown"
-MNT_neutrality_DEF:0 "Moontown"
-MNT_fascism:0 "Moontown"
-MNT_fascism_DEF:0 "Moontown"
-MNT_communism:0 "Moontown"
-MNT_communism_DEF:0 "Moontown"
-MNT_democratic:0 "Moontown"
-MNT_democratic_DEF:0 "Moontown"
-MNT_fascism_ADJ:0 "Moontown"
-MNT_democratic_ADJ:0 "Moontown"
-MNT_neutrality_ADJ:0 "Moontown"
-MNT_communism_ADJ:0 "Moontown"
+MNT_neutrality:0 "Мунтаун"
+MNT_neutrality_DEF:0 "Мунтаун"
+MNT_fascism:0 "Мунтаун"
+MNT_fascism_DEF:0 "Мунтаун"
+MNT_communism:0 "Мунтаун"
+MNT_communism_DEF:0 "Мунтаун"
+MNT_democratic:0 "Мунтаун"
+MNT_democratic_DEF:0 "Мунтаун"
+MNT_fascism_ADJ:0 "Мунтаунск"
+MNT_democratic_ADJ:0 "Мунтаунск"
+MNT_neutrality_ADJ:0 "Мунтаунск"
+MNT_communism_ADJ:0 "Мунтаунск"
 
 ##################label
 # West Equestria #
 ##################
-ANG_neutrality:0 "Angren"
-ANG_neutrality_DEF:0 ""
-ANG_fascism:0 ""
-ANG_fascism_DEF:0 ""
-ANG_communism:0 ""
-ANG_communism_DEF:0 ""
-ANG_democratic:0 ""
-ANG_democratic_DEF:0 ""
-ANG_fascism_ADJ:0 ""
-ANG_democratic_ADJ:0 ""
-ANG_neutrality_ADJ:0 ""
-ANG_communism_ADJ:0 ""
+ANG_neutrality:0 "Свангерн"
+ANG_neutrality_DEF:0 "Свангерн"
+ANG_fascism:0 "Свангерн"
+ANG_fascism_DEF:0 "Свангерн"
+ANG_communism:0 "Свангерн"
+ANG_communism_DEF:0 "Свангерн"
+ANG_democratic:0 "Свангерн"
+ANG_democratic_DEF:0 "Свангерн"
+ANG_fascism_ADJ:0 "Свангернск"
+ANG_democratic_ADJ:0 "Свангернск"
+ANG_neutrality_ADJ:0 "Свангернск"
+ANG_communism_ADJ:0 "Свангернск"
 
 ##############label
 # South-East #
 ##############
-BAL_neutrality:0 "Kingdom of Baltimare"
-BAL_neutrality_DEF:0 "Kingdom of Baltimare"
-BAL_fascism:0 "Baltimare Governorate"
-BAL_fascism_DEF:0 "The Governorate of Baltimare"
-BAL_communism:0 "Baltimare Republic"
-BAL_communism_DEF:0 "The Workers' Republic of Baltimare"
-BAL_democratic:0 "Baltimare Region"
-BAL_democratic_DEF:0 "The Baltimare Region"
-BAL_fascism_ADJ:0 "Baltimarean"
-BAL_democratic_ADJ:0 "Baltimarean"
-BAL_neutrality_ADJ:0 "Baltimarean"
-BAL_communism_ADJ:0 "Baltimarean"
+BAL_neutrality:0 "Королевство Балтимейр"
+BAL_neutrality_DEF:0 "Королевство Балтимейр"
+BAL_fascism:0 "Говернорат Балтимейр"
+BAL_fascism_DEF:0 "Говернорат Балтимейр"
+BAL_communism:0 "Балтимейрская Республика"
+BAL_communism_DEF:0 "Балтимейрская Республика Рабочих"
+BAL_democratic:0 "Балтимейрский Регион"
+BAL_democratic_DEF:0 "Балтимейрский Регион"
+BAL_fascism_ADJ:0 "Балтимейрск"
+BAL_democratic_ADJ:0 "Балтимейрск"
+BAL_neutrality_ADJ:0 "Балтимейрск"
+BAL_communism_ADJ:0 "Балтимейрск"
 
-DRG_neutrality:0 "Dragon Empire"
-DRG_neutrality_DEF:0 "Dragon Empire"
-DRG_fascism:0 "Dragon Empire"
-DRG_fascism_DEF:0 "The Dragon Empire"
-DRG_communism:0 "Union of Dragon Communes"
-DRG_communism_DEF:0 "The Union of Dragon Communes"
-DRG_democratic:0 "United Dragon Isles"
-DRG_democratic_DEF:0 "The United Dragon Isles"
-DRG_fascism_ADJ:0 "Draconian"
-DRG_democratic_ADJ:0 "Draconian"
-DRG_neutrality_ADJ:0 "Draconian"
-DRG_communism_ADJ:0 "Draconian"
+DRG_neutrality:0 "Империя Драконов"
+DRG_neutrality_DEF:0 "Империя Драконов"
+DRG_fascism:0 "Империя Драконов"
+DRG_fascism_DEF:0 "Империя Драконов"
+DRG_communism:0 "Союз Драконьих Коммун"
+DRG_communism_DEF:0 "Союз Драконьих Коммун"
+DRG_democratic:0 "Объединённые Драконьи Острова"
+DRG_democratic_DEF:0 "Объединённые Драконьи Острова"
+DRG_fascism_ADJ:0 "Драконск"
+DRG_democratic_ADJ:0 "Драконск"
+DRG_neutrality_ADJ:0 "Драконск"
+DRG_communism_ADJ:0 "Драконск"
 
 ##############label
 # South-West #
 ##############
-LSP_neutrality:0 "Las Pegasus"
-LSP_neutrality_DEF:0 "Las Pegasus"
-LSP_fascism:0 "Las Pegasus"
-LSP_fascism_DEF:0 "Las Pegasus"
-LSP_communism:0 "Las Pegasus"
-LSP_communism_DEF:0 "Las Pegasus"
-LSP_democratic:0 "Las Pegasus"
-LSP_democratic_DEF:0 "Las Pegasus"
-LSP_fascism_ADJ:0 "Las Pegasusian"
-LSP_democratic_ADJ:0 "Las Pegasusian"
-LSP_neutrality_ADJ:0 "Las Pegasusian"
-LSP_communism_ADJ:0 "Las Pegasusian"
+LSP_neutrality:0 "Лас Пегасус"
+LSP_neutrality_DEF:0 "Лас Пегасус"
+LSP_fascism:0 "Лас Пегасус"
+LSP_fascism_DEF:0 "Лас Пегасус"
+LSP_communism:0 "Лас Пегасус"
+LSP_communism_DEF:0 "Лас Пегасус"
+LSP_democratic:0 "Лас Пегасус"
+LSP_democratic_DEF:0 "Лас Пегасус"
+LSP_fascism_ADJ:0 "Лас Пегасусск"
+LSP_democratic_ADJ:0 "Лас Пегасусск"
+LSP_neutrality_ADJ:0 "Лас Пегасусск"
+LSP_communism_ADJ:0 "Лас Пегасусск"
 
-CAN_neutrality:0 "Canter's Confederation"
-CAN_neutrality_DEF:0 "Canter's Confederation"
-CAN_fascism:0 "Canter's Confederation"
-CAN_fascism_DEF:0 "Canter's Confederation"
-CAN_communism:0 "Canter's Confederation"
-CAN_communism_DEF:0 "Canter's Confederation"
-CAN_democratic:0 "Canter's Confederation"
-CAN_democratic_DEF:0 "Canter's Confederation"
-CAN_fascism_ADJ:0 "Canter's Confederation"
-CAN_democratic_ADJ:0 "Canter's Confederation"
-CAN_neutrality_ADJ:0 "Canter's Confederation"
-CAN_communism_ADJ:0 "Canter's Confederation"
+CAN_neutrality:0 "Канетрская Конфедерация"
+CAN_neutrality_DEF:0 "Канетрская Конфедерация"
+CAN_fascism:0 "Канетрская Конфедерация"
+CAN_fascism_DEF:0 "Канетрская Конфедерация"
+CAN_communism:0 "Канетрская Конфедерация"
+CAN_communism_DEF:0 "Канетрская Конфедерация"
+CAN_democratic:0 "Канетрская Конфедерация"
+CAN_democratic_DEF:0 "Канетрская Конфедерация"
+CAN_fascism_ADJ:0 "Канетрск"
+CAN_democratic_ADJ:0 "Канетрск"
+CAN_neutrality_ADJ:0 "Канетрск"
+CAN_communism_ADJ:0 "Канетрск"
 
 ##############label
 # North-West #
 ##############
-OLE_neutrality:0 "Olengaard"
+OLE_neutrality:0 "Оленгаард"
 OLE_neutrality_DEF:0 ""
 OLE_fascism:0 ""
 OLE_fascism_DEF:0 ""
@@ -215,77 +215,77 @@ YAK_fascism:0 ""
 YAK_fascism_DEF:0 ""
 YAK_communism:0 ""
 YAK_communism_DEF:0 ""
-YAK_democratic:0 "Crossmountain Republic"
-YAK_democratic_DEF:0 "The Crossmountain Republic"
-YAK_fascism_ADJ:0 "Yak"
-YAK_democratic_ADJ:0 "Yak"
-YAK_neutrality_ADJ:0 "Yak"
-YAK_communism_ADJ:0 "Yak"
+YAK_democratic:0 "Межгорная Республика"
+YAK_democratic_DEF:0 "Межгорная Республика"
+YAK_fascism_ADJ:0 "Якск"
+YAK_democratic_ADJ:0 "Якск"
+YAK_neutrality_ADJ:0 "Якск"
+YAK_communism_ADJ:0 "Якск"
 
-PNG_neutrality:0 "Pingland"
-PNG_neutrality_DEF:0 "Kingdom of Pingland"
-PNG_fascism:0 "Pingland"
+PNG_neutrality:0 "Пингланд"
+PNG_neutrality_DEF:0 "Королевство Пингланд"
+PNG_fascism:0 "Пингланд"
 PNG_fascism_DEF:0 ""
-PNG_communism:0 "Pingland"
+PNG_communism:0 "Пингланд"
 PNG_communism_DEF:0 ""
-PNG_democratic:0 "Pingland Republic"
-PNG_democratic_DEF:0 "Pingland Republic"
-PNG_fascism_ADJ:0 "Pinglands"
-PNG_democratic_ADJ:0 "Pinglands"
-PNG_neutrality_ADJ:0 "Pinglands"
-PNG_communism_ADJ:0 "Pinglands"
+PNG_democratic:0 "Пингландская Республика"
+PNG_democratic_DEF:0 "Пингландская Республика"
+PNG_fascism_ADJ:0 "Пингландсдк"
+PNG_democratic_ADJ:0 "Пингландсдк"
+PNG_neutrality_ADJ:0 "Пингландсдк"
+PNG_communism_ADJ:0 "Пингландсдк"
 
-PLB_neutrality:0 "Polar Bear Communities"
-PLB_fascism:0 "Polar Bear Communities"
-PLB_communism:0 "Polar Bear Socialist Communities"
-PLB_democratic:0 "Polar Bear Communities"
-PLB_neutrality_DEF:0 "The Polar Bear Communities"
-PLB_fascism_DEF:0 "The Polar Bear Communities"
-PLB_communism_DEF:0 "The Polar Bear Socialist Communities"
-PLB_democratic_DEF:0 "The Polar Bear Communities"
-PLB_fascism_ADJ:0 "Polar Bear"
-PLB_democratic_ADJ:0 "Polar Bear"
-PLB_neutrality_ADJ:0 "Polar Bear"
-PLB_communism_ADJ:0 "Polar Bear"
+PLB_neutrality:0 "Сообщества Полярных Медведей"
+PLB_fascism:0 "Сообщества Полярных Медведей"
+PLB_communism:0 "Социалистические Сообщества Полярных Медведей"
+PLB_democratic:0 "Сообщества Полярных Медведей"
+PLB_neutrality_DEF:0 "Сообщества Полярных Медведей"
+PLB_fascism_DEF:0 "Сообщества Полярных Медведей"
+PLB_communism_DEF:0 "Социалистические Сообщества Полярных Медведей"
+PLB_democratic_DEF:0 "Сообщества Полярных Медведей"
+PLB_fascism_ADJ:0 "Медвеж"
+PLB_democratic_ADJ:0 "Медвеж"
+PLB_neutrality_ADJ:0 "Медвеж"
+PLB_communism_ADJ:0 "Медвеж"
 
 #########################label
 # Former Nova Griffonia #
 #########################
-GRF_neutrality:0 "Monarchist Restoration Front"
-GRF_neutrality_DEF:0 "Monarchist Restoration Front"
-GRF_fascism:0 "Nova Griffonia"
-GRF_fascism_DEF:0 "Nova Griffonian Dictatorship"
-GRF_communism:0 "Griffonian Liberation Front"
-GRF_communism_DEF:0 "Griffonian Liberation Front"
+GRF_neutrality:0 "Фронт Восстановления Монархии"
+GRF_neutrality_DEF:0 "Фронт Восстановления Монархии"
+GRF_fascism:0 "Нова Грифония"
+GRF_fascism_DEF:0 "Нова Грифонская Диктатура"
+GRF_communism:0 "Освободительный Фронт Грифонов"
+GRF_communism_DEF:0 "Освободительный Фронт Грифонов"
 GRF_democratic:0 ""
 GRF_democratic_DEF:0 ""
-GRF_fascism_ADJ:0 "Griffonian"
-GRF_democratic_ADJ:0 "Griffonian"
-GRF_neutrality_ADJ:0 "Griffonian"
-GRF_communism_ADJ:0 "Griffonian"
+GRF_fascism_ADJ:0 "Грифонск"
+GRF_democratic_ADJ:0 "Грифонск"
+GRF_neutrality_ADJ:0 "Грифонск"
+GRF_communism_ADJ:0 "Грифонск"
 
-GFF_neutrality:0 "Frontier"
-GFF_neutrality_DEF:0 "Griffonian Frontier"
-GFF_fascism:0 "Frontier"
-GFF_fascism_DEF:0 ""
-GFF_communism:0 "Frontier"
-GFF_communism_DEF:0 ""
-GFF_democratic:0 "Frontier"
-GFF_democratic_DEF:0 ""
-GFF_fascism_ADJ:0 "Griffonian"
-GFF_democratic_ADJ:0 "Griffonian"
-GFF_neutrality_ADJ:0 "Griffonian"
-GFF_communism_ADJ:0 "Griffonian"
+GFF_neutrality:0 "Фронтир"
+GFF_neutrality_DEF:0 "Грифоний Фронтир"
+GFF_fascism:0 "Фронтир"
+GFF_fascism_DEF:0 "Фронтир"
+GFF_communism:0 "Фронтир"
+GFF_communism_DEF:0 "Фронтир"
+GFF_democratic:0 "Фронтир"
+GFF_democratic_DEF:0 "Фронтир"
+GFF_fascism_ADJ:0 "Грифонск"
+GFF_democratic_ADJ:0 "Грифонск"
+GFF_neutrality_ADJ:0 "Грифонск"
+GFF_communism_ADJ:0 "Грифонск"
 
-MOR_neutrality:0 "Morien"
-MOR_neutrality_DEF:0 "Morien"
-MOR_fascism:0 "Morien"
-MOR_fascism_DEF:0 "Morien"
-MOR_communism:0 "Morien"
-MOR_communism_DEF:0 "Morien"
-MOR_democratic:0 "Morien"
-MOR_democratic_DEF:0 "Morien"
-MOR_fascism_ADJ:0 "Moriens"
-MOR_democratic_ADJ:0 "Moriens"
-MOR_neutrality_ADJ:0 "Moriens"
-MOR_communism_ADJ:0 "Moriens"
+MOR_neutrality:0 "Мориен"
+MOR_neutrality_DEF:0 "Мориен"
+MOR_fascism:0 "Мориен"
+MOR_fascism_DEF:0 "Мориен"
+MOR_communism:0 "Мориен"
+MOR_communism_DEF:0 "Мориен"
+MOR_democratic:0 "Мориен"
+MOR_democratic_DEF:0 "Мориен"
+MOR_fascism_ADJ:0 "Мориенск"
+MOR_democratic_ADJ:0 "Мориенск"
+MOR_neutrality_ADJ:0 "Мориенск"
+MOR_communism_ADJ:0 "Мориенск"
