--- a/localisation/country_SEV_l_english.yml
+++ b/localisation/country_SEV_l_english.yml
@@ -1,4 +1,11 @@
 ﻿l_english:
+#######################################################
+##### STATE ###########################################
+#######################################################
+
+#######################################################
+##### PARTIES #########################################
+#######################################################
 
 #######################################################
 ##### FOCUSES #########################################
@@ -11,385 +18,3 @@
 #######################################################
 ##### EVENTS ##########################################
 #######################################################
-
-#######################################################
-##### EQUIPMENT #######################################
-#######################################################
-
-
-
- SEV_EQUIPMENT_VERSION_10:0 "C-1"
- SEV_EQUIPMENT_VERSION_11:0 "C-2"
- SEV_EQUIPMENT_VERSION_12:0 "CM"
- SEV_EQUIPMENT_VERSION_13:0 "D"
- SEV_EQUIPMENT_VERSION_14:0 "D-1"
- SEV_EQUIPMENT_VERSION_15:0 "D-2"
- SEV_EQUIPMENT_VERSION_16:0 "DM"
- SEV_EQUIPMENT_VERSION_1:0 "A"
- SEV_EQUIPMENT_VERSION_2:0 "A-1"
- SEV_EQUIPMENT_VERSION_3:0 "A-2"
- SEV_EQUIPMENT_VERSION_4:0 "AM"
- SEV_EQUIPMENT_VERSION_5:0 "B"
- SEV_EQUIPMENT_VERSION_6:0 "B-1"
- SEV_EQUIPMENT_VERSION_7:0 "B-2"
- SEV_EQUIPMENT_VERSION_8:0 "BM"
- SEV_EQUIPMENT_VERSION_9:0 "C"
- 
- ##################
- # Infantry equip #
- ##################
-
- SEV_infantry_at:0 "PTRD"
- SEV_infantry_at2:0 "RPG-43"
- 
- SEV_support_weapons:0 "PM M1910 & 9 cm GR"
- SEV_support_weapons2:0 "DP & RM-38"
- SEV_support_weapons3:0 "DS-39 & 82-PM-41"
- SEV_support_weapons4:0 "SG-43 Goryunov & 120-PM-43"
-
- SEV_infantry_equipment_0:0 "Lilia-Rifle"
- SEV_infantry_equipment_0_short:0 "Lilia-Rifle"
- 
- SEV_infantry_equipment_1:0 "SVT-38/40"
- SEV_infantry_equipment_1_short:0 "SVETA"
- 
- SEV_infantry_equipment_2:0 "PPSh-41"
- SEV_infantry_equipment_2_short:0 "PPSh-10"
- 
- SEV_infantry_equipment_3:0 "PPS-13"
- SEV_infantry_equipment_3_short:0 "PPS-13"
- 
- SEV_infantry_equipment_x:0 "AK-17"
- SEV_infantry_equipment_x_short:0 "AK-17"
- SEV_infantry_equipment_x_desc:0 "Better equipment layouts and reductions in weight have led to great advances in efficiency and power."
-  
- SEV_infantry_equipment_x_2:0 "AK-25"
- SEV_infantry_equipment_x_2_short:0 "AK-25"
- SEV_infantry_equipment_x_2_desc:0 "Better equipment layouts and reductions in weight have led to great advances in efficiency and power."
-
-
- SEV_magical_equipment_1:0 "Stalliongradskoye Prostoe Mana-Ruzhyo"
- SEV_magical_equipment_1_short:0 "SPMR"
- 
- SEV_magical_equipment_2:0 "Avtomaticheskoye Mana-Ruzhyo Serova, model 12 goda"
- SEV_magical_equipment_2_short:0 "AMRS-12"
- 
- SEV_magical_equipment_3:0 "Mana-Avtomat Lunina"
- SEV_magical_equipment_3_short:0 "MAL-1"
- 
- SEV_magical_equipment_4:0 "Mana-Luchemet Konzanskogo NII"
- SEV_magical_equipment_4_short:0 "Mana-Luchemet"
- 
- 
- SEV_motorized_equipment_1:0 "ZIS-5"
- 
- SEV_motorized_rocket_equipment_1:0 "BM-13 Katyusha"
- SEV_motorized_rocket_equipment_1_short:0 "Katyusha"
- 
- 
- SEV_mechanized_equipment_1:0 "BTR-1013"
- SEV_mechanized_equipment_1_short:0 "BTR-1013"
- 
- SEV_mechanized_equipment_2:0 "BTR-1015"
- SEV_mechanized_equipment_2_short:0 "BTR-1015"
- 
- SEV_mechanized_equipment_3:0 "BTR-152"
- SEV_mechanized_equipment_3_short:0 "BTR-152"
- 
- ###################
- # Artillery equip #
- ###################
- SEV_anti_air_equipment_1:0 "M1939 37mm AA"
- SEV_anti_air_equipment_1_short:0 "M1939 37mm AA"
- 
- SEV_anti_air_equipment_2:0 "M1940 25mm AA"
- 
- SEV_anti_air_equipment_3:0 "KS-19 100mm"
- 
- 
- SEV_anti_tank_equipment_1:0 "M 1930 37mm"
- SEV_anti_tank_equipment_1_short:0 "M1930"
- 
- SEV_anti_tank_equipment_2:0 "M 42 45mm"
- 
- SEV_anti_tank_equipment_3:0 "76.2mm ZiS-3"
- 
- 
- SEV_artillery_equipment_1:0 "M05 76mm"
- SEV_artillery_equipment_1_short:0 "M05 76mm"
- 
- SEV_artillery_equipment_2:0 "M60 107mm"
- 
- SEV_artillery_equipment_3:0 "M13 152mm"
- 
- 
- SEV_rocket_artillery_equipment_1:0 "M-8-6"
- SEV_rocket_artillery_equipment_1_short:0 "M-8-6"
- 
- SEV_rocket_artillery_equipment_2:0 "M-20-4"
- SEV_rocket_artillery_equipment_2_short:0 "M-20-4"
- 
- ##############
- # Tank equip #
- ##############
- SEV_gw_tank_equipment:0 "T-18"
- SEV_gw_tank_equipment_short:0 "T-18"
- 
- 
- SEV_light_tank_equipment_1:0 "T-26"
- SEV_light_tank_equipment_1_short:0 "T-26"
-
- SEV_light_tank_equipment_2:0 "BT-7"
- SEV_light_tank_equipment_2_short:0 "BT-7"
-
- SEV_light_tank_equipment_3:0 "T-60"
- SEV_light_tank_equipment_3_short:0 "T-60"
- 
- SEV_light_tank_equipment_x:0 "T-80"
- SEV_light_tank_equipment_x_short:0 "T-80"
- 
- SEV_light_tank_equipment_x_2:0 "T-50-2"
- SEV_light_tank_equipment_x_2_short:0 "T-50-2" 
- 
- 
- SEV_light_tank_aa_equipment_1:0 "ZSU-12.7"
- SEV_light_tank_aa_equipment_1_short:0 "ZSU-12.7"
- 
- SEV_light_tank_aa_equipment_2:0 "T-90"
- SEV_light_tank_aa_equipment_2_short:0 "T-90"
- 
- SEV_light_tank_aa_equipment_3:0 "ZSU-37"
- SEV_light_tank_aa_equipment_3_short:0 "ZSU-37"
- 
- SEV_light_tank_artillery_equipment_1:0 "SU-26"
- SEV_light_tank_artillery_equipment_1_short:0 "SU-26"
- 
- SEV_light_tank_artillery_equipment_2:0 "BT-7A"
- SEV_light_tank_artillery_equipment_2_short:0 "BT-7A"
- 
- SEV_light_tank_artillery_equipment_3:0 "SU-76"
- SEV_light_tank_artillery_equipment_3_short:0 "SU-76"
- 
- SEV_light_tank_artillery_equipment_x:0 "SU-76M"
- SEV_light_tank_artillery_equipment_x_short:0 "SU-76M"
- 
- SEV_light_tank_destroyer_equipment_1:0 "SU-37"
- SEV_light_tank_destroyer_equipment_1_short:0 "SU-37"
- 
- SEV_light_tank_destroyer_equipment_2:0 "SU-45"
- SEV_light_tank_destroyer_equipment_2_short:0 "SU-45"
- 
- SEV_light_tank_destroyer_equipment_3:0 "ZiS-30"
- SEV_light_tank_destroyer_equipment_3_short:0 "ZiS-30"
-
-
- SEV_heavy_tank_equipment_1:0 "T-35"
- SEV_heavy_tank_equipment_1_short:0 "T-35"
- 
- SEV_heavy_tank_equipment_2:0 "KV-1"
- SEV_heavy_tank_equipment_2_short:0 "KV-1"
- 
- SEV_heavy_tank_equipment_3:0 "SZh-2"
- SEV_heavy_tank_equipment_3_short:0 "SZh-2"
- 
- 
- SEV_heavy_tank_aa_equipment_1:0 "ZSU-12.7-4"
- SEV_heavy_tank_aa_equipment_1_short:0 "ZSU-12.7-4"
-
- SEV_heavy_tank_artillery_equipment_1:0 "SU-14"
- SEV_heavy_tank_artillery_equipment_1_short:0 "SU-14"
- 
- SEV_heavy_tank_destroyer_equipment_1:0 "SMK"
- SEV_heavy_tank_destroyer_equipment_1_short:0 "SMK"
- 
- SEV_heavy_tank_aa_equipment_2:0 "ZSU-37-Y"
- SEV_heavy_tank_aa_equipment_2_short:0 "ZSU-37-Y"
- 
- SEV_heavy_tank_artillery_equipment_2:0 "KV-2"
- SEV_heavy_tank_artillery_equipment_2_short:0 "KV-2"
- 
- SEV_heavy_tank_destroyer_equipment_2:0 "SU-100"
- SEV_heavy_tank_destroyer_equipment_2_short:0 "SU-100"
- 
- SEV_heavy_tank_aa_equipment_3:0 "ISU-57-2"
- SEV_heavy_tank_aa_equipment_3_short:0 "ISU-57-2"
- 
- SEV_heavy_tank_artillery_equipment_3:0 "ISU-152"
- SEV_heavy_tank_artillery_equipment_3_short:0 "ISU-152"
-
- SEV_heavy_tank_destroyer_equipment_3:0 "ISU-122"
- SEV_heavy_tank_destroyer_equipment_3_short:0 "ISU-122"
-
-
- SEV_medium_tank_equipment_1:0 "A-32"
- SEV_medium_tank_equipment_1_short:0 "A-32"
- 
- SEV_medium_tank_equipment_2:0 "T-34-76"
- SEV_medium_tank_equipment_2_short:0 "T-34-76"
- 
- SEV_medium_tank_equipment_3:0 "T-34-85"
- SEV_medium_tank_equipment_3_short:0 "T-34-85"
-
-
- SEV_medium_tank_aa_equipment_1:0 "ZSU-37-32"
- SEV_medium_tank_aa_equipment_1_short:0 "ZSU-37-32"
- 
- SEV_medium_tank_artillery_equipment_1:0 "SU-76i"
- SEV_medium_tank_artillery_equipment_1_short:0 "SU-76i"
- 
- SEV_medium_tank_destroyer_equipment_1:0 "T-34-57"
- SEV_medium_tank_destroyer_equipment_1_short:0 "T-34-57"
- 
- SEV_medium_tank_aa_equipment_2:0 "ZSU-37-34"
- SEV_medium_tank_aa_equipment_2_short:0 "ZSU-37-34"
-
- SEV_medium_tank_artillery_equipment_2:0 "SU-122"
- SEV_medium_tank_artillery_equipment_2_short:0 "SU-122"
- 
- SEV_medium_tank_destroyer_equipment_2:0 "SU-85"
- SEV_medium_tank_destroyer_equipment_2_short:0 "SU-85"
- 
- SEV_medium_tank_aa_equipment_3:0 "ZSU-57-44"
- SEV_medium_tank_aa_equipment_3_short:0 "ZSU-57-44"
- 
- SEV_medium_tank_artillery_equipment_3:0 "SU-152"
- SEV_medium_tank_artillery_equipment_3_short:0 "SU-152"
- 
- SEV_medium_tank_destroyer_equipment_3:0 "SU-85M"
- SEV_medium_tank_destroyer_equipment_3_short:0 "SU-85M"
-
-
- SEV_modern_tank_equipment_1:0 "T-44"
- SEV_modern_tank_equipment_1_short:0 "T-44"
- 
- SEV_modern_tank_equipment_x:0 "T-44-100"
- SEV_modern_tank_equipment_x_1_short:0 "T-44-100"
-
- SEV_modern_tank_equipment_x_2:0 "T-54-18"
- SEV_modern_tank_equipment_x_2_short:0 "T-54-18"
-
- SEV_modern_tank_equipment_x_3:0 "T-54B"
- SEV_modern_tank_equipment_x_3_short:0 "T-54B"
-
- SEV_modern_tank_equipment_x_4:0 "T-55"
- SEV_modern_tank_equipment_x_4_short:0 "T-55"
-
- SEV_modern_tank_equipment_x_5:0 "T-62"
- SEV_modern_tank_equipment_x_5_short:0 "T-62"
-
- SEV_modern_tank_aa_equipment_1:0 "ZSU-57-2"
- SEV_modern_tank_aa_equipment_1_short:0 "ZSU-57-2"
- 
- SEV_modern_tank_artillery_equipment_1:0 "SU-152-54"
- SEV_modern_tank_artillery_equipment_1_short:0 "SU-152-54"
- 
- SEV_modern_tank_destroyer_equipment_1:0 "SU-122-54"
- SEV_modern_tank_destroyer_equipment_1_short:0 "SU-122-54"
-
- 
- SEV_super_heavy_tank_equipment_1:0 "SZh-4"
- SEV_super_heavy_tank_equipment_1_short:0 "SZh-4"
- 
- SEV_super_heavy_tank_equipment_x:0 "SZh-7"
- SEV_super_heavy_tank_equipment_x_short:0 "SZh-7"
- 
- SEV_super_heavy_tank_equipment_x_2:0 "Object 279"
- SEV_super_heavy_tank_equipment_x_2_short:0 "Object 279"
- 
- 
- SEV_super_heavy_tank_aa_equipment_1:0 "ISU-57-4"
- SEV_super_heavy_tank_aa_equipment_1_short:0 "ISU-57-4"
- 
- SEV_super_heavy_tank_artillery_equipment_1:0 "ISU-203"
- SEV_super_heavy_tank_artillery_equipment_1_short:0 "ISU-203"
- 
- SEV_super_heavy_tank_destroyer_equipment_1:0 "ISU-130"
- SEV_super_heavy_tank_destroyer_equipment_1_short:0 "ISU-130"
-
-
-
- #############
- # Air equip #
- #############
- SEV_CAS_equipment_1:0 "SU-2"
- SEV_CAS_equipment_1_short:0 "Su-2"
- SEV_CAS_equipment_2:0 "Ilyushin IL-2 Sturmovik"
- SEV_CAS_equipment_2_short:0 "IL-2 Sturmovik"
- SEV_CAS_equipment_3:0 "Ilyushin IL-10"
- SEV_CAS_equipment_3_short:0 "IL-10"
- SEV_cv_CAS_equipment_1:0 "Tumansky Palubniy M-88"
- SEV_cv_CAS_equipment_1_short:0 "PM-88"
- SEV_cv_CAS_equipment_2:0 "Ilyushin Il-2T"
- SEV_cv_CAS_equipment_2_short:0 "Il-2T"
- SEV_cv_CAS_equipment_3:0 "Ilyushin IL-10T"
- SEV_cv_CAS_equipment_3_short:0 "IL-10T"
- SEV_cv_fighter_equipment_0:0 "Polikarpov I-15UD"
- SEV_cv_fighter_equipment_0_short:0 "I-15UD"
- SEV_cv_fighter_equipment_1:0 "Polikarpov I-153"
- SEV_cv_fighter_equipment_1_short:0 "I-153"
- SEV_cv_fighter_equipment_2:0 "Yakovlev Yak-1M"
- SEV_cv_fighter_equipment_2_short:0 "Yak-1M"
- SEV_cv_fighter_equipment_3:0 "Yakovlev Yak-9T"
- SEV_cv_fighter_equipment_3_short:0 "Yak-9T"
- SEV_cv_nav_bomber_equipment_1:0 "Ilyushin Palubniy Il-4"
- SEV_cv_nav_bomber_equipment_1_short:0 "PIl-4"
- SEV_cv_nav_bomber_equipment_2:0 "Tupolev Palubniy ANT-62T"
- SEV_cv_nav_bomber_equipment_2_short:0 "PANT-62T"
- SEV_cv_nav_bomber_equipment_3:0 "Ilyushin Palubniy Il-6"
- SEV_cv_nav_bomber_equipment_3_short:0 "PIl-6"
- SEV_early_bomber:0 "Ilyushin DB-3"
- SEV_early_bomber_short:0 "DB-3"
- SEV_fighter_equipment_0:0 "I-15"
- SEV_fighter_equipment_0_short:0 "I-15"
- SEV_fighter_equipment_1:0 "LaGG-3"
- SEV_fighter_equipment_1_short:0 "LaGG-3"
- SEV_fighter_equipment_2:0 "Lavochka 5"
- SEV_fighter_equipment_2_short:0 "La-5"
- SEV_fighter_equipment_3:0 "Yak-3"
- SEV_fighter_equipment_3_short:0 "Yak-3"
- SEV_heavy_fighter_equipment_1:0 "MiG-3"
- SEV_heavy_fighter_equipment_1_short:0 "MiG-3"
- SEV_heavy_fighter_equipment_2:0 "Petlyakov Pe-2"
- SEV_heavy_fighter_equipment_2_short:0 "Pe-2"
- SEV_heavy_fighter_equipment_3:0 "Tupolev Tu-1"
- SEV_heavy_fighter_equipment_3_short:0 "Tu-1"
- SEV_jet_fighter_equipment_1:0 "Yakovlev-15"
- SEV_jet_fighter_equipment_1_short:0 "Yak-15"
- SEV_jet_fighter_equipment_2:0 "Mikoyan-Guerevich MiG-15"
- SEV_jet_fighter_equipment_2_short:0 "MiG-15"
- SEV_jet_fighter_equipment_x:0 "Mikoyan-Guerevich MiG-21"
- SEV_jet_fighter_equipment_x_short:0 "MiG-21"
- SEV_jet_strat_bomber_equipment_1:0 "Tupolev Tu-95"
- SEV_jet_strat_bomber_equipment_1_short:0 "Tu-95"
- SEV_jet_strat_bomber_equipment_x:0 "Myasishchev M-4"
- SEV_jet_strat_bomber_equipment_x_short:0 "M-4"
- SEV_jet_tac_bomber_equipment_1:0 "Ilyushin Il-28"
- SEV_jet_tac_bomber_equipment_1_short:0 "Il-28"
- SEV_jet_tac_bomber_equipment_2:0 "Tupolev Tu-16"
- SEV_jet_tac_bomber_equipment_2_short:0 "Tu-16"
- SEV_jet_tac_bomber_equipment_x:0 "IL-54"
- SEV_jet_tac_bomber_equipment_x_short:0 "IL-54"
- SEV_nav_bomber_equipment_1:0 "Ilyushin Il-4"
- SEV_nav_bomber_equipment_1_short:0 "Il-4"
- SEV_nav_bomber_equipment_2:0 "Tupolev Tu-2D"
- SEV_nav_bomber_equipment_2_short:0 "Tu-2D"
- SEV_nav_bomber_equipment_3:0 "Ilyushin Il-6"
- SEV_nav_bomber_equipment_3_short:0 "Il-6"
- SEV_strat_bomber_equipment_1:0 "IL-4"
- SEV_strat_bomber_equipment_1_short:0 "IL-4"
- SEV_strat_bomber_equipment_2:0 "Petlyakov Pe-8"
- SEV_strat_bomber_equipment_2_short:0 "Pe-8"
- SEV_strat_bomber_equipment_3:0 "Tupolev Tu-4"
- SEV_strat_bomber_equipment_3_short:0 "Tu-4"
- SEV_tac_bomber_equipment_0:0 "Ilyushin DB-3"
- SEV_tac_bomber_equipment_0_short:0 "DB-3"
- SEV_tac_bomber_equipment_1:0 "Tupolev SB-2M"
- SEV_tac_bomber_equipment_1_short:0 "SB-2M"
- SEV_tac_bomber_equipment_2:0 "Tupolev Tu-2"
- SEV_tac_bomber_equipment_2_short:0 "Tu-2"
- SEV_tac_bomber_equipment_3:0 "Tupolev Tu-8"
- SEV_tac_bomber_equipment_3_short:0 "Tu-8"
- SEV_transport_plane:0 "Li-2"
- SEV_transport_plane_equipment_1:0 "Li-2"
- SEV_scout_plane_equipment_1:0 "R-10"
- SEV_scout_plane_equipment_2:0 "Yak-2"
