--- a/localisation/country_SEV_l_russian.yml
+++ b/localisation/country_SEV_l_russian.yml
@@ -2,15 +2,34 @@
 #######################################################
 ##### STATE ###########################################
 #######################################################
-
+SEV_neutrality:0 "Северянская Империя"
+SEV_neutrality_DEF:0 "Северянская Империя"
+SEV_fascism:0 "Северяна"
+SEV_fascism_DEF:0 "Северянское Государство"
+SEV_communism:0 "ССФСР"
+SEV_communism_DEF:0 "Северянская Советская Федеративная Социалистическая Республика"
+SEV_democratic:0 "Северянская Федерация"
+SEV_democratic_DEF:0 "Северянская Федерация"
+SEV_fascism_ADJ:0 "Северянск"
+SEV_democratic_ADJ:0 "Северянск"
+SEV_neutrality_ADJ:0 "Северянск"
+SEV_communism_ADJ:0 "Северянск"
 #######################################################
 ##### PARTIES #########################################
 #######################################################
-
+SEV_fascism_party:0 "ССС"
+SEV_fascism_party_long:0 "Союз Спасения Севера"
+SEV_neutrality_party:0 "Корона"
+SEV_neutrality_party_long:0 "Северянская Корона"
+SEV_democratic_party:0 "АПК"
+SEV_democratic_party_long:0 "Ассоциация Прогрессивных Князей"
+SEV_communism_party:0 "Бунт"
+SEV_communism_party_long:0 "Бунт"
 #######################################################
 ##### FOCUSES #########################################
 #######################################################
-
+SEV_start:0 "..."
+SEV_start_desc:0 ""
 #######################################################
 ##### IDEAS ###########################################
 #######################################################
