--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -118,17 +118,17 @@ LAR_communism_ADJ:0 ""
 # East Equestria #
 ##################
 SEV_neutrality:0 "Severianskaja Imperija"
-SEV_neutrality_DEF:0 "The Severian Empire"
+SEV_neutrality_DEF:0 "The Severianian Empire"
 SEV_fascism:0 ""
 SEV_fascism_DEF:0 ""
 SEV_communism:0 ""
 SEV_communism_DEF:0 ""
 SEV_democratic:0 ""
 SEV_democratic_DEF:0 ""
-SEV_fascism_ADJ:0 "Severian"
-SEV_democratic_ADJ:0 "Severian"
-SEV_neutrality_ADJ:0 "Severian"
-SEV_communism_ADJ:0 "Severian"
+SEV_fascism_ADJ:0 "Severianian"
+SEV_democratic_ADJ:0 "Severianian"
+SEV_neutrality_ADJ:0 "Severianian"
+SEV_communism_ADJ:0 "Severianian"
 
 #STL in replace/tdr_eaw_countries_overrides_l_english.yml
 
