--- a/localisation/country_SEV_l_english.yml
+++ b/localisation/country_SEV_l_english.yml
@@ -2,15 +2,34 @@
 #######################################################
 ##### STATE ###########################################
 #######################################################
-
+SEV_neutrality:0 "Severianskaja Imperija"
+SEV_neutrality_DEF:0 "The Severianian Empire"
+SEV_fascism:0 "Severiana"
+SEV_fascism_DEF:0 "Severianian State"
+SEV_communism:0 "SSFSR"
+SEV_communism_DEF:0 "Severianian Soviet Federative Socialist Republic"
+SEV_democratic:0 "Severianian Federation"
+SEV_democratic_DEF:0 "Severianian Federation"
+SEV_fascism_ADJ:0 "Severianian"
+SEV_democratic_ADJ:0 "Severianian"
+SEV_neutrality_ADJ:0 "Severianian"
+SEV_communism_ADJ:0 "Severianian"
 #######################################################
 ##### PARTIES #########################################
 #######################################################
-
+SEV_fascism_party:0 "SSS"
+SEV_fascism_party_long:0 "Soyuz Spasenija Severa"
+SEV_neutrality_party:0 "Crown"
+SEV_neutrality_party_long:0 "Severianian Crown"
+SEV_democratic_party:0 "APK"
+SEV_democratic_party_long:0 "Associacija Progressivnih Knyazej"
+SEV_communism_party:0 "Bunt"
+SEV_communism_party_long:0 "Strike"
 #######################################################
 ##### FOCUSES #########################################
 #######################################################
-
+SEV_start:0 "..."
+SEV_start_desc:0 ""
 #######################################################
 ##### IDEAS ###########################################
 #######################################################
