STL files + fixes for equipment

--- a/localisation/country_SEV_l_english.yml
+++ b/localisation/country_SEV_l_english.yml
@@ -28,6 +28,7 @@ SEV_communism_party_long:0 "Strike"
 #######################################################
 ##### FOCUSES #########################################
 #######################################################
+Severiana_focus:0 "Severianian Focus Tree"
 SEV_start:0 "..."
 SEV_start_desc:0 ""
 #######################################################
