--- a/localisation/country_SEV_l_russian.yml
+++ b/localisation/country_SEV_l_russian.yml
@@ -28,6 +28,7 @@ SEV_communism_party_long:0 "Бунт"
 #######################################################
 ##### FOCUSES #########################################
 #######################################################
+Severiana_focus:0 "Северянское Дерево Фокусов"
 SEV_start:0 "..."
 SEV_start_desc:0 ""
 #######################################################
