--- a/localisation/eaw_equip_air_l_russian.yml
+++ b/localisation/eaw_equip_air_l_russian.yml
@@ -387,7 +387,7 @@ WES_scout_plane_equipment_1_short:0 "UWA.126"
 WES_scout_plane_equipment_2:0 "Svarm Aircraft 189"
 WES_scout_plane_equipment_2_short:0 "SV.189"
 
-### SEVERIANA ####
+### SEVERIANA ###
 SEV_CAS_equipment_1:0 "СУ-2"
 SEV_CAS_equipment_1_short:0 "СУ-2"
 SEV_CAS_equipment_2:0 "Ильюшин Ил-2 Штурмовик"
@@ -470,3 +470,87 @@ SEV_transport_plane:0 "Ли-2"
 SEV_transport_plane_equipment_1:0 "Ли-2"
 SEV_scout_plane_equipment_1:0 "Р-10"
 SEV_scout_plane_equipment_2:0 "Як-2"
+
+### NOVOKRISTAL'SK ###
+STL_CAS_equipment_1:0 "СУ-2"
+STL_CAS_equipment_1_short:0 "СУ-2"
+STL_CAS_equipment_2:0 "Ильюшин Ил-2 Штурмовик"
+STL_CAS_equipment_2_short:0 "Ил-2 Штурмовик"
+STL_CAS_equipment_3:0 "Ильюшин Ил-10"
+STL_CAS_equipment_3_short:0 "Ил-10"
+STL_cv_CAS_equipment_1:0 "Туманский Палубный М-88"
+STL_cv_CAS_equipment_1_short:0 "ПМ-88"
+STL_cv_CAS_equipment_2:0 "Ильюшин Ил-2Т"
+STL_cv_CAS_equipment_2_short:0 "Ил-2Т"
+STL_cv_CAS_equipment_3:0 "Ильюшин Ил-10Т"
+STL_cv_CAS_equipment_3_short:0 "Ил-10Т"
+STL_cv_fighter_equipment_0:0 "Поликарпов И-15УД"
+STL_cv_fighter_equipment_0_short:0 "И-15УД"
+STL_cv_fighter_equipment_1:0 "Поликарпов И-153"
+STL_cv_fighter_equipment_1_short:0 "И-153"
+STL_cv_fighter_equipment_2:0 "Яковлев Як-1М"
+STL_cv_fighter_equipment_2_short:0 "Як-1М"
+STL_cv_fighter_equipment_3:0 "Яковлев Як-9Т"
+STL_cv_fighter_equipment_3_short:0 "Як-9Т"
+STL_cv_nav_bomber_equipment_1:0 "Ильюшин Палубный Ил-4"
+STL_cv_nav_bomber_equipment_1_short:0 "ПИл-4"
+STL_cv_nav_bomber_equipment_2:0 "Туполев Палубный АНТ-62Т"
+STL_cv_nav_bomber_equipment_2_short:0 "ПАНТ-62Т"
+STL_cv_nav_bomber_equipment_3:0 "Ильюшин Палубный Ил-6"
+STL_cv_nav_bomber_equipment_3_short:0 "ПИл-6"
+STL_early_bomber:0 "Ильюшин ДБ-3"
+STL_early_bomber_short:0 "ДБ-3"
+STL_fighter_equipment_0:0 "И-15"
+STL_fighter_equipment_0_short:0 "И-15"
+STL_fighter_equipment_1:0 "ЛаГГ-3"
+STL_fighter_equipment_1_short:0 "ЛаГГ-3"
+STL_fighter_equipment_2:0 "Лавочка 5"
+STL_fighter_equipment_2_short:0 "Ла-5"
+STL_fighter_equipment_3:0 "Як-3"
+STL_fighter_equipment_3_short:0 "Як-3"
+STL_heavy_fighter_equipment_1:0 "МиГ-3"
+STL_heavy_fighter_equipment_1_short:0 "МиГ-3"
+STL_heavy_fighter_equipment_2:0 "Петляков Пе-2"
+STL_heavy_fighter_equipment_2_short:0 "Пе-2"
+STL_heavy_fighter_equipment_3:0 "Туполев Ту-1"
+STL_heavy_fighter_equipment_3_short:0 "Ту-1"
+STL_jet_fighter_equipment_1:0 "Яковлев-15"
+STL_jet_fighter_equipment_1_short:0 "Як-15"
+STL_jet_fighter_equipment_2:0 "Микоян-Гуревич МиГ-15"
+STL_jet_fighter_equipment_2_short:0 "МиГ-15"
+STL_jet_fighter_equipment_x:0 "Микоян-Гуревич МиГ-21"
+STL_jet_fighter_equipment_x_short:0 "МиГ-21"
+STL_jet_strat_bomber_equipment_1:0 "Туполев Ту-95"
+STL_jet_strat_bomber_equipment_1_short:0 "Ту-95"
+STL_jet_strat_bomber_equipment_x:0 "Мясищев М-4"
+STL_jet_strat_bomber_equipment_x_short:0 "М-4"
+STL_jet_tac_bomber_equipment_1:0 "Ильюшин Ил-28"
+STL_jet_tac_bomber_equipment_1_short:0 "Ил-28"
+STL_jet_tac_bomber_equipment_2:0 "Туполев Ту-16"
+STL_jet_tac_bomber_equipment_2_short:0 "Ту-16"
+STL_jet_tac_bomber_equipment_x:0 "ИЛ-54"
+STL_jet_tac_bomber_equipment_x_short:0 "ИЛ-54"
+STL_nav_bomber_equipment_1:0 "Ильюшин Ил-4"
+STL_nav_bomber_equipment_1_short:0 "Ил-4"
+STL_nav_bomber_equipment_2:0 "Туполев Ту-2Д"
+STL_nav_bomber_equipment_2_short:0 "Ту-2Д"
+STL_nav_bomber_equipment_3:0 "Ильюшин Ил-6"
+STL_nav_bomber_equipment_3_short:0 "Ил-6"
+STL_strat_bomber_equipment_1:0 "ИЛ-4"
+STL_strat_bomber_equipment_1_short:0 "ИЛ-4"
+STL_strat_bomber_equipment_2:0 "Петляков Пе-8"
+STL_strat_bomber_equipment_2_short:0 "Пе-8"
+STL_strat_bomber_equipment_3:0 "Туполев Ту-4"
+STL_strat_bomber_equipment_3_short:0 "Ту-4"
+STL_tac_bomber_equipment_0:0 "Ильюшин ДБ-3"
+STL_tac_bomber_equipment_0_short:0 "ДБ-3"
+STL_tac_bomber_equipment_1:0 "Туполев СБ-2М"
+STL_tac_bomber_equipment_1_short:0 "СБ-2М"
+STL_tac_bomber_equipment_2:0 "Туполев Ту-2"
+STL_tac_bomber_equipment_2_short:0 "Ту-2"
+STL_tac_bomber_equipment_3:0 "Туполев Ту-8"
+STL_tac_bomber_equipment_3_short:0 "Ту-8"
+STL_transport_plane:0 "Ли-2"
+STL_transport_plane_equipment_1:0 "Ли-2"
+STL_scout_plane_equipment_1:0 "Р-10"
+STL_scout_plane_equipment_2:0 "Як-2"
