--- a/localisation/eaw_equipment_l_russian.yml
+++ b/localisation/eaw_equipment_l_russian.yml
@@ -923,7 +923,7 @@
  #Changelings
 
 
- #Stalliongrad
+ ### Severiana ###
 
  SEV_EQUIPMENT_VERSION_10:0 "Ц-1"
  SEV_EQUIPMENT_VERSION_11:0 "Ц-2"
@@ -1113,7 +1113,198 @@
  SEV_super_heavy_tank_artillery_equipment_1_short:0 "ИСУ-203"
  SEV_super_heavy_tank_destroyer_equipment_1:0 "ИСУ-130"
  SEV_super_heavy_tank_destroyer_equipment_1_short:0 "ИСУ-130"
+
+ ### Novokristal'sk ###
  
+ STL_EQUIPMENT_VERSION_10:0 "Ц-1"
+ STL_EQUIPMENT_VERSION_11:0 "Ц-2"
+ STL_EQUIPMENT_VERSION_12:0 "ЦМ"
+ STL_EQUIPMENT_VERSION_13:0 "Д"
+ STL_EQUIPMENT_VERSION_14:0 "Д-1"
+ STL_EQUIPMENT_VERSION_15:0 "Д-2"
+ STL_EQUIPMENT_VERSION_16:0 "ДМ"
+ STL_EQUIPMENT_VERSION_1:0 "А"
+ STL_EQUIPMENT_VERSION_2:0 "А-1"
+ STL_EQUIPMENT_VERSION_3:0 "А-2"
+ STL_EQUIPMENT_VERSION_4:0 "АМ"
+ STL_EQUIPMENT_VERSION_5:0 "Б"
+ STL_EQUIPMENT_VERSION_6:0 "Б-1"
+ STL_EQUIPMENT_VERSION_7:0 "Б-2"
+ STL_EQUIPMENT_VERSION_8:0 "БМ"
+ STL_EQUIPMENT_VERSION_9:0 "Ц"
+ ##################
+ # Infantry equip #
+ ##################
+ STL_infantry_at:0 "ПТРД"
+ STL_infantry_at2:0 "РПГ-43"
+ STL_support_weapons:0 "ПМ М1910 & 9 см ГР"
+ STL_support_weapons2:0 "ДП & РМ-38"
+ STL_support_weapons3:0 "ДС-39 & 82-ПМ-41"
+ STL_support_weapons4:0 "SG-43 Goryunov & 120-PM-43"
+ STL_infantry_equipment_0:0 "Винтовка 'Лилия'"
+ STL_infantry_equipment_0_short:0 "Винтовка 'Лилия'"
+ STL_infantry_equipment_1:0 "СВТ-38/40"
+ STL_infantry_equipment_1_short:0 "СВЕТА"
+ STL_infantry_equipment_2:0 "ППШ-41"
+ STL_infantry_equipment_2_short:0 "ППШ-10"
+ STL_infantry_equipment_3:0 "ППС-13"
+ STL_infantry_equipment_3_short:0 "ППС-13"
+ STL_infantry_equipment_x:0 "АК-17"
+ STL_infantry_equipment_x_short:0 "AK-17"
+ STL_infantry_equipment_x_desc:0 "Улучшение конструкции и уменьшение веса оружия привели к значительным улучшениям его мощи и эффективности."
+ STL_infantry_equipment_x_2:0 "АК-25"
+ STL_infantry_equipment_x_2_short:0 "АК-25"
+ STL_infantry_equipment_x_2_desc:0 "Улучшение конструкции и уменьшение веса оружия привели к значительным улучшениям его мощи и эффективности."
+ STL_magical_equipment_1:0 "Северянское Простое Мана Ружье"
+ STL_magical_equipment_1_short:0 "СПМР"
+ STL_magical_equipment_2:0 "Автоматическое Мана Ружье Серова, модель 12 года"
+ STL_magical_equipment_2_short:0 "АМРС-12"
+ STL_magical_equipment_3:0 "Мана-Автомат Лунина"
+ STL_magical_equipment_3_short:0 "МАЛ-1"
+ STL_magical_equipment_4:0 "Мана-Лучемет Коньзанского НИИ"
+ STL_magical_equipment_4_short:0 "Мана-Лучемет"
+ STL_motorized_equipment_1:0 "ЗИС-5"
+ STL_motorized_rocket_equipment_1:0 "БM-13 Катюша"
+ STL_motorized_rocket_equipment_1_short:0 "Катюша"
+ STL_mechanized_equipment_1:0 "БТР-1013"
+ STL_mechanized_equipment_1_short:0 "БТР-1013"
+ STL_mechanized_equipment_2:0 "БТР-1015"
+ STL_mechanized_equipment_2_short:0 "БТР-1015"
+ STL_mechanized_equipment_3:0 "БТР-152"
+ STL_mechanized_equipment_3_short:0 "БТР-152"
+ ###################
+ # Artillery equip #
+ ###################
+ STL_anti_air_equipment_1:0 "М1939 37мм АА"
+ STL_anti_air_equipment_1_short:0 "М1939 37мм АА"
+ STL_anti_air_equipment_2:0 "М1940 25мм АА"
+ STL_anti_air_equipment_3:0 "КС-19 100мм"
+ STL_anti_tank_equipment_1:0 "М 1930 37мм"
+ STL_anti_tank_equipment_1_short:0 "М1930"
+ STL_anti_tank_equipment_2:0 "М 42 45мм"
+ STL_anti_tank_equipment_3:0 "76.2мм ЗиС-3"
+ STL_artillery_equipment_1:0 "М05 76мм"
+ STL_artillery_equipment_1_short:0 "М05 76мм"
+ STL_artillery_equipment_2:0 "М60 107мм"
+ STL_artillery_equipment_3:0 "М13 152мм"
+ STL_rocket_artillery_equipment_1:0 "М-8-6"
+ STL_rocket_artillery_equipment_1_short:0 "М-8-6"
+ STL_rocket_artillery_equipment_2:0 "М-20-4"
+ STL_rocket_artillery_equipment_2_short:0 "М-20-4"
+ ##############
+ # Tank equip #
+ ##############
+ STL_gw_tank_equipment:0 "Т-18"
+ STL_gw_tank_equipment_short:0 "Т-18"
+ STL_light_tank_equipment_1:0 "Т-26"
+ STL_light_tank_equipment_1_short:0 "Т-26"
+ STL_light_tank_equipment_2:0 "БТ-7"
+ STL_light_tank_equipment_2_short:0 "БТ-7"
+ STL_light_tank_equipment_3:0 "Т-60"
+ STL_light_tank_equipment_3_short:0 "Т-60"
+ STL_light_tank_equipment_x:0 "Т-80"
+ STL_light_tank_equipment_x_short:0 "Т-80"
+ STL_light_tank_equipment_x_2:0 "Т-50-2"
+ STL_light_tank_equipment_x_2_short:0 "Т-50-2" 
+ STL_light_tank_aa_equipment_1:0 "ЗСУ-12.7"
+ STL_light_tank_aa_equipment_1_short:0 "ЗСУ-12.7"
+ STL_light_tank_aa_equipment_2:0 "Т-90"
+ STL_light_tank_aa_equipment_2_short:0 "Т-90"
+ STL_light_tank_aa_equipment_3:0 "ЗСУ-37"
+ STL_light_tank_aa_equipment_3_short:0 "ЗСУ-37"
+ STL_light_tank_artillery_equipment_1:0 "СУ-26"
+ STL_light_tank_artillery_equipment_1_short:0 "СУ-26"
+ STL_light_tank_artillery_equipment_2:0 "БТ-7А"
+ STL_light_tank_artillery_equipment_2_short:0 "БТ-7А"
+ STL_light_tank_artillery_equipment_3:0 "СУ-76"
+ STL_light_tank_artillery_equipment_3_short:0 "СУ-76"
+ STL_light_tank_artillery_equipment_x:0 "СУ-76M"
+ STL_light_tank_artillery_equipment_x_short:0 "СУ-76M"
+ STL_light_tank_destroyer_equipment_1:0 "СУ-37"
+ STL_light_tank_destroyer_equipment_1_short:0 "СУ-37"
+ STL_light_tank_destroyer_equipment_2:0 "СУ-45"
+ STL_light_tank_destroyer_equipment_2_short:0 "СУ-45"
+ STL_light_tank_destroyer_equipment_3:0 "ЗиС-30"
+ STL_light_tank_destroyer_equipment_3_short:0 "ЗиС-30"
+ STL_heavy_tank_equipment_1:0 "Т-35"
+ STL_heavy_tank_equipment_1_short:0 "Т-35"
+ STL_heavy_tank_equipment_2:0 "КВ-1"
+ STL_heavy_tank_equipment_2_short:0 "КВ-1"
+ STL_heavy_tank_equipment_3:0 "ИС-2"
+ STL_heavy_tank_equipment_3_short:0 "ИС-2"
+ STL_heavy_tank_aa_equipment_1:0 "ЗСУ-12.7-4"
+ STL_heavy_tank_aa_equipment_1_short:0 "ЗСУ-12.7-4"
+ STL_heavy_tank_artillery_equipment_1:0 "СУ-14"
+ STL_heavy_tank_artillery_equipment_1_short:0 "СУ-14"
+ STL_heavy_tank_destroyer_equipment_1:0 "СМК"
+ STL_heavy_tank_destroyer_equipment_1_short:0 "СМК"
+ STL_heavy_tank_aa_equipment_2:0 "ЗсУ-37-Y"
+ STL_heavy_tank_aa_equipment_2_short:0 "ЗсУ-37-Y"
+ STL_heavy_tank_artillery_equipment_2:0 "КВ-2"
+ STL_heavy_tank_artillery_equipment_2_short:0 "КВ-2"
+ STL_heavy_tank_destroyer_equipment_2:0 "СУ-100"
+ STL_heavy_tank_destroyer_equipment_2_short:0 "СУ-100"
+ STL_heavy_tank_aa_equipment_3:0 "ИСУ-57-2"
+ STL_heavy_tank_aa_equipment_3_short:0 "ИСУ-57-2"
+ STL_heavy_tank_artillery_equipment_3:0 "ИСУ-152"
+ STL_heavy_tank_artillery_equipment_3_short:0 "ИСУ-152"
+ STL_heavy_tank_destroyer_equipment_3:0 "ИСУ-122"
+ STL_heavy_tank_destroyer_equipment_3_short:0 "ИСУ-122"
+ STL_medium_tank_equipment_1:0 "А-32"
+ STL_medium_tank_equipment_1_short:0 "А-32"
+ STL_medium_tank_equipment_2:0 "Т-34-76"
+ STL_medium_tank_equipment_2_short:0 "Т-34-76"
+ STL_medium_tank_equipment_3:0 "Т-34-85"
+ STL_medium_tank_equipment_3_short:0 "Т-34-85"
+ STL_medium_tank_aa_equipment_1:0 "ЗсУ-37-32"
+ STL_medium_tank_aa_equipment_1_short:0 "ЗсУ-37-32"
+ STL_medium_tank_artillery_equipment_1:0 "СУ-76i"
+ STL_medium_tank_artillery_equipment_1_short:0 "СУ-76i"
+ STL_medium_tank_destroyer_equipment_1:0 "Т-34-57"
+ STL_medium_tank_destroyer_equipment_1_short:0 "Т-34-57"
+ STL_medium_tank_aa_equipment_2:0 "ЗсУ-37-34"
+ STL_medium_tank_aa_equipment_2_short:0 "ЗсУ-37-34"
+ STL_medium_tank_artillery_equipment_2:0 "СУ-122"
+ STL_medium_tank_artillery_equipment_2_short:0 "СУ-122"
+ STL_medium_tank_destroyer_equipment_2:0 "СУ-85"
+ STL_medium_tank_destroyer_equipment_2_short:0 "СУ-85"
+ STL_medium_tank_aa_equipment_3:0 "ЗсУ-57-44"
+ STL_medium_tank_aa_equipment_3_short:0 "ЗсУ-57-44"
+ STL_medium_tank_artillery_equipment_3:0 "СУ-152"
+ STL_medium_tank_artillery_equipment_3_short:0 "СУ-152"
+ STL_medium_tank_destroyer_equipment_3:0 "СУ-85М"
+ STL_medium_tank_destroyer_equipment_3_short:0 "СУ-85М"
+ STL_modern_tank_equipment_1:0 "Т-44"
+ STL_modern_tank_equipment_1_short:0 "Т-44"
+ STL_modern_tank_equipment_x:0 "Т-44-100"
+ STL_modern_tank_equipment_x_1_short:0 "Т-44-100"
+ STL_modern_tank_equipment_x_2:0 "Т-54-18"
+ STL_modern_tank_equipment_x_2_short:0 "Т-54-18"
+ STL_modern_tank_equipment_x_3:0 "Т-54B"
+ STL_modern_tank_equipment_x_3_short:0 "Т-54B"
+ STL_modern_tank_equipment_x_4:0 "Т-55"
+ STL_modern_tank_equipment_x_4_short:0 "Т-55"
+ STL_modern_tank_equipment_x_5:0 "Т-62"
+ STL_modern_tank_equipment_x_5_short:0 "Т-62"
+ STL_modern_tank_aa_equipment_1:0 "ЗсУ-57-2"
+ STL_modern_tank_aa_equipment_1_short:0 "ЗсУ-57-2"
+ STL_modern_tank_artillery_equipment_1:0 "СУ-152-54"
+ STL_modern_tank_artillery_equipment_1_short:0 "СУ-152-54"
+ STL_modern_tank_destroyer_equipment_1:0 "СУ-122-54"
+ STL_modern_tank_destroyer_equipment_1_short:0 "СУ-122-54"
+ STL_super_heavy_tank_equipment_1:0 "ИС-4"
+ STL_super_heavy_tank_equipment_1_short:0 "ИС-4"
+ STL_super_heavy_tank_equipment_x:0 "ИС-7"
+ STL_super_heavy_tank_equipment_x_short:0 "ИС-7"
+ STL_super_heavy_tank_equipment_x_2:0 "Объект 279"
+ STL_super_heavy_tank_equipment_x_2_short:0 "Объект 279"
+ STL_super_heavy_tank_aa_equipment_1:0 "ИСУ-57-4"
+ STL_super_heavy_tank_aa_equipment_1_short:0 "ИСУ-57-4"
+ STL_super_heavy_tank_artillery_equipment_1:0 "ИСУ-203"
+ STL_super_heavy_tank_artillery_equipment_1_short:0 "ИСУ-203"
+ STL_super_heavy_tank_destroyer_equipment_1:0 "ИСУ-130"
+ STL_super_heavy_tank_destroyer_equipment_1_short:0 "ИСУ-130"
+
  #Olenia
  OLE_EQUIPMENT_VERSION_1:0 "A"
  OLE_EQUIPMENT_VERSION_2:0 "B"
